disable strict parameters for tsx files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    // change it to work with js components
+    "noImplicitAny": false,
+    // 
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
