--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@ethersproject/contracts": "^5.0.8",
     "@ethersproject/hash": "^5.0.9",
     "@ethersproject/providers": "^5.0.17",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@toruslabs/torus-embed": "^1.8.1",
     "@walletconnect/web3-provider": "^1.2.2",
     "authereum": "0.0.4-beta.201",
@@ -16,22 +20,30 @@
     "bignumber.js": "^8.1.1",
     "bitski": "^0.10.9",
     "blockies-ts": "^1.0.0",
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "ethereumjs-util": "^6.1.0",
     "ethers": "^5.0.24",
+    "font-awesome": "^4.7.0",
     "fortmatic": "^0.8.2",
     "noty": "^3.2.0-beta",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts-ts": "^4.0.8",
     "styled-components": "4.2.0",
     "web3": "^1.3.0",
     "web3modal": "^1.9.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build:css": "node-sass src/ -o src/ ",
+    "watch:css": "npm run build:css && node-sass src/ -o src/ -w -r",
+    "start:js": "react-scripts-ts start",
+    "start": "npm-run-all -p watch:css start:js",
+    "build:js": "react-scripts-ts build",
+    "build": "npm-run-all build:*",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -39,11 +51,15 @@
     "@types/ethereumjs-util": "^5.2.0",
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
+    "@types/node-sass": "^4.11.2",
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "4.1.8",
     "@types/web3": "^1.2.2",
+    "node-sass": "^7.0.1",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.45.1",
     "typescript": "^3.2.2"
   },
   "browserslist": [
